src/test/resources/errors/AssertionError2.mch
MACHINE AssertionError
ASSERTIONS 2 = 1
VARIABLES x
INVARIANT x : 1..2
INITIALISATION x := 1
OPERATIONS
foo = PRE x = 1 THEN x:= 2 END 
END